tests/build/cases/impl_ui_node/delegate_expr_error_incorrect_type_child.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/impl_ui_node/delegate_expr_error_incorrect_type_child.rs:9:16
  |
9 | #[impl_ui_node(child)]
  | ---------------^^^^^--
  | |              |
  | |              the trait `UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNode`:
            <implementers-list>
